--- a/index.html
+++ b/index.html
@@ -8144,13 +8144,20 @@ var $author$project$TrainingMode$tutorialCloseStep = A6(
 	$author$project$TrainingMode$noStateActions,
 	$author$project$TrainingMode$noExitActions,
 	$author$project$TrainingMode$static('No text.'));
+var $elm$core$Basics$sin = _Basics_sin;
+var $author$project$TrainingMode$tutorialGoniometerSwinging = function (model) {
+	return _Utils_update(
+		model,
+		{
+			goniometerAzimuth: 1.2 * $elm$core$Basics$sin(model.modelTime / 1000)
+		});
+};
 var $author$project$TrainingMode$tutorialHeightMode = function (model) {
 	return _Utils_update(
 		model,
 		{goniometerMode: $author$project$Types$Elevation, inputState: $author$project$Types$HeightInput});
 };
 var $elm$core$String$fromFloat = _String_fromNumber;
-var $elm$core$Basics$sin = _Basics_sin;
 var $elm$core$Basics$truncate = _Basics_truncate;
 var $author$project$Grid$gridPosition = F2(
 	function (range, bearing) {
@@ -8415,9 +8422,10 @@ var $author$project$TrainingMode$tutorial = _List_fromArray(
 		$author$project$Types$UiCRT,
 		_List_fromArray(
 			[$author$project$TrainingMode$tutorialBearingMode]),
-		$author$project$TrainingMode$noStateActions,
+		_List_fromArray(
+			[$author$project$TrainingMode$tutorialGoniometerSwinging]),
 		$author$project$TrainingMode$noExitActions,
-		$author$project$TrainingMode$static('We\'ll watch the operator work out the position of an incoming raid.\n        Click ► to begin.\n        ')),
+		$author$project$TrainingMode$static('The operator is turning the gonio, looking for any sign of a signal.\n        Click ► to begin.\n        ')),
 		A6(
 		$author$project$TrainingMode$TutorialEntry,
 		$author$project$Types$TutorialIncomingRaid,
@@ -9045,7 +9053,9 @@ var $author$project$Range$rangeTurnAngle = F3(
 			_Utils_Tuple2(newX - $author$project$Range$radius, newY - $author$project$Range$radius));
 		var dragNowAngle = _v3.b;
 		var newAngle = (startAngle + dragNowAngle) - dragStartAngle;
-		return $author$project$Utils$normalise(newAngle);
+		return (_Utils_cmp(
+			$elm$core$Basics$abs(dragNowAngle - dragStartAngle),
+			$elm$core$Basics$pi) > 0) ? startAngle : $author$project$Utils$normalise(newAngle);
 	});
 var $author$project$LobeFunctions$rxLoVertLobe = function (α) {
 	return $elm$core$Basics$sin(7 * α);
@@ -9183,7 +9193,7 @@ var $author$project$Main$update = F2(
 						model,
 						$elm$time$Time$posixToMillis(time)),
 					$elm$core$Platform$Cmd$none);
-			case 'ToggleMenu':
+			case 'ToggleLearnMenu':
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
@@ -9209,25 +9219,25 @@ var $author$project$Main$update = F2(
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
-						{currPage: $author$project$Types$OperatorPage, tutorialStage: $elm$core$Maybe$Nothing}),
+						{currPage: $author$project$Types$OperatorPage, isMenuOpen: false, tutorialStage: $elm$core$Maybe$Nothing}),
 					$elm$core$Platform$Cmd$none);
 			case 'DisplayConfiguration':
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
-						{currPage: $author$project$Types$InputPage}),
+						{currPage: $author$project$Types$InputPage, isMenuOpen: false}),
 					$elm$core$Platform$Cmd$none);
 			case 'DisplayCalculator':
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
-						{currPage: $author$project$Types$OutputPage}),
+						{currPage: $author$project$Types$OutputPage, isMenuOpen: false}),
 					$elm$core$Platform$Cmd$none);
 			case 'DisplayTraining':
 				return _Utils_Tuple2(
 					_Utils_update(
 						model,
-						{currPage: $author$project$Types$TrainingPage, startTime: model.modelTime, tutorialStage: $author$project$TrainingMode$tutorialEntryPoint, webGLtime: 0.0}),
+						{currPage: $author$project$Types$TrainingPage, isMenuOpen: false, startTime: model.modelTime, tutorialStage: $author$project$TrainingMode$tutorialEntryPoint, webGLtime: 0.0}),
 					$elm$core$Platform$Cmd$none);
 			case 'TutorialAdvance':
 				return _Utils_Tuple2(
@@ -9309,14 +9319,20 @@ var $author$project$Main$update = F2(
 						0 - stopKnob,
 						stopKnob,
 						A3($author$project$Range$rangeTurnAngle, startAngle, startXY, offset));
+					var newSliderPosition = (($elm$core$Basics$pi + $author$project$Utils$normalise(newAngle)) * 50) / $elm$core$Basics$pi;
 					return _Utils_Tuple2(
-						_Utils_update(
+						($elm$core$Basics$abs(newSliderPosition - model.rangeSlider) < 50) ? _Utils_update(
 							model,
 							{
 								rangeDrag: $elm$core$Maybe$Just(
 									_Utils_Tuple2(newAngle, offset)),
 								rangeKnobAngle: newAngle,
-								rangeSlider: (($elm$core$Basics$pi + $author$project$Utils$normalise(newAngle)) * 50) / $elm$core$Basics$pi
+								rangeSlider: newSliderPosition
+							}) : _Utils_update(
+							model,
+							{
+								rangeDrag: $elm$core$Maybe$Just(
+									_Utils_Tuple2(newAngle, offset))
 							}),
 						$elm$core$Platform$Cmd$none);
 				}
@@ -15885,7 +15901,7 @@ var $author$project$TrainingMode$tutorialTextBox = F2(
 				}
 			}());
 	});
-var $author$project$CalculatorDisplay$calculator = function (model) {
+var $author$project$CalculatorDisplay$calculatorLandscape = function (model) {
 	var strength = model.storedStrength;
 	var range = model.storedAzimuthRange;
 	var plus = model.storedStrengthPlus;
@@ -15972,6 +15988,83 @@ var $author$project$CalculatorDisplay$calculator = function (model) {
 							position))
 					]))
 			]));
+};
+var $author$project$CalculatorDisplay$calculatorPortrait = function (model) {
+	var strength = model.storedStrength;
+	var range = model.storedAzimuthRange;
+	var plus = model.storedStrengthPlus;
+	var height = model.storedElevation;
+	var friendly = model.storedFriendly;
+	var bearing = model.storedAzimuth;
+	var position = A2($author$project$Grid$gridPosition, range, bearing);
+	return A2(
+		$mdgriffith$elm_ui$Element$column,
+		_Utils_ap(
+			_List_fromArray(
+				[
+					$mdgriffith$elm_ui$Element$centerX,
+					$mdgriffith$elm_ui$Element$width($mdgriffith$elm_ui$Element$fill),
+					A2(
+					$author$project$TrainingMode$tutorialTextBox,
+					model,
+					_List_fromArray(
+						[$mdgriffith$elm_ui$Element$alignTop, $mdgriffith$elm_ui$Element$centerX]))
+				]),
+			A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiCalculator)),
+		_List_fromArray(
+			[
+				A2(
+				$mdgriffith$elm_ui$Element$row,
+				_List_fromArray(
+					[$mdgriffith$elm_ui$Element$centerX]),
+				_List_fromArray(
+					[
+						A2($author$project$CalculatorDisplay$positionGridDisplay, model, position),
+						$author$project$Utils$helpButton
+					])),
+				A2(
+				$mdgriffith$elm_ui$Element$column,
+				_Utils_ap(
+					A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiCalcOffset),
+					_List_fromArray(
+						[$mdgriffith$elm_ui$Element$centerX])),
+				_List_fromArray(
+					[
+						$author$project$CalculatorDisplay$offsetDisplay(
+						A2(
+							$elm$core$Maybe$map,
+							function ($) {
+								return $.gridSquareOffsetEast;
+							},
+							position)),
+						$author$project$CalculatorDisplay$offsetDisplay(
+						A2(
+							$elm$core$Maybe$map,
+							function ($) {
+								return $.gridSquareOffsetNorth;
+							},
+							position))
+					])),
+				A2(
+				$mdgriffith$elm_ui$Element$row,
+				_List_fromArray(
+					[$mdgriffith$elm_ui$Element$centerX]),
+				_List_fromArray(
+					[
+						A2($author$project$CalculatorDisplay$strengthDisplay, model, strength),
+						A2($author$project$CalculatorDisplay$maybeBoolDisplay, '+', plus),
+						A2($author$project$CalculatorDisplay$maybeBoolDisplay, 'F', friendly)
+					])),
+				A2($author$project$CalculatorDisplay$heightGrid, model, height)
+			]));
+};
+var $author$project$CalculatorDisplay$calculator = function (model) {
+	var _v0 = model.outputDevice.orientation;
+	if (_v0.$ === 'Landscape') {
+		return $author$project$CalculatorDisplay$calculatorLandscape(model);
+	} else {
+		return $author$project$CalculatorDisplay$calculatorPortrait(model);
+	}
 };
 var $author$project$Main$calculatorPage = function (model) {
 	return $author$project$CalculatorDisplay$calculator(model);
@@ -16705,21 +16798,52 @@ var $mdgriffith$elm_ui$Element$layout = $mdgriffith$elm_ui$Element$layoutWith(
 var $author$project$Messages$DisplayCalculator = {$: 'DisplayCalculator'};
 var $author$project$Messages$DisplayConfiguration = {$: 'DisplayConfiguration'};
 var $author$project$Messages$DisplayReceiver = {$: 'DisplayReceiver'};
+var $author$project$Messages$ToggleLearnMenu = {$: 'ToggleLearnMenu'};
+var $mdgriffith$elm_ui$Internal$Model$Below = {$: 'Below'};
+var $mdgriffith$elm_ui$Element$below = function (element) {
+	return A2($mdgriffith$elm_ui$Element$createNearby, $mdgriffith$elm_ui$Internal$Model$Below, element);
+};
 var $author$project$Messages$DisplayTraining = {$: 'DisplayTraining'};
-var $author$project$Main$navBar = function () {
-	var navItem = F2(
-		function (label, action) {
-			return A2(
-				$mdgriffith$elm_ui$Element$el,
-				_Utils_ap(
-					_List_fromArray(
-						[
-							$mdgriffith$elm_ui$Element$pointer,
-							$mdgriffith$elm_ui$Element$Events$onClick(action)
-						]),
-					$author$project$Utils$disableSelection),
-				$mdgriffith$elm_ui$Element$text(label));
-		});
+var $mdgriffith$elm_ui$Element$moveDown = function (y) {
+	return A2(
+		$mdgriffith$elm_ui$Internal$Model$TransformComponent,
+		$mdgriffith$elm_ui$Internal$Flag$moveY,
+		$mdgriffith$elm_ui$Internal$Model$MoveY(y));
+};
+var $author$project$Main$navItem = F2(
+	function (label, action) {
+		return A2(
+			$mdgriffith$elm_ui$Element$el,
+			_Utils_ap(
+				_List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$pointer,
+						$mdgriffith$elm_ui$Element$Events$onClick(action)
+					]),
+				$author$project$Utils$disableSelection),
+			$mdgriffith$elm_ui$Element$text(label));
+	});
+var $author$project$Main$learningMenu = A2(
+	$mdgriffith$elm_ui$Element$column,
+	_List_fromArray(
+		[
+			$mdgriffith$elm_ui$Element$spacing(20),
+			$mdgriffith$elm_ui$Element$Background$color($author$project$Constants$flatMidnightBlue),
+			$mdgriffith$elm_ui$Element$Border$color($author$project$Constants$paletteLightGreen),
+			$mdgriffith$elm_ui$Element$Border$width(2),
+			$mdgriffith$elm_ui$Element$moveDown(10),
+			$mdgriffith$elm_ui$Element$padding(20),
+			$mdgriffith$elm_ui$Element$Font$color($author$project$Constants$white)
+		]),
+	_List_fromArray(
+		[
+			A2($author$project$Main$navItem, 'Basic operation', $author$project$Messages$DisplayTraining),
+			A2($author$project$Main$navItem, '2 aircraft together', $author$project$Messages$DisplayTraining),
+			A2($author$project$Main$navItem, '2 aircraft apart', $author$project$Messages$DisplayTraining),
+			A2($author$project$Main$navItem, '3 to 6 strong raid', $author$project$Messages$DisplayTraining),
+			A2($author$project$Main$navItem, 'Friendly (IFF)', $author$project$Messages$DisplayTraining)
+		]));
+var $author$project$Main$navBar = function (model) {
 	return A2(
 		$mdgriffith$elm_ui$Element$row,
 		_List_fromArray(
@@ -16734,18 +16858,22 @@ var $author$project$Main$navBar = function () {
 			]),
 		_List_fromArray(
 			[
-				A2(navItem, 'Learn', $author$project$Messages$DisplayTraining),
-				A2(navItem, 'Configuration', $author$project$Messages$DisplayConfiguration),
-				A2(navItem, 'Operator', $author$project$Messages$DisplayReceiver),
-				A2(navItem, 'Calculator', $author$project$Messages$DisplayCalculator)
+				A2(
+				$mdgriffith$elm_ui$Element$el,
+				model.isMenuOpen ? _List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$below($author$project$Main$learningMenu)
+					]) : _List_Nil,
+				A2($author$project$Main$navItem, 'Learn', $author$project$Messages$ToggleLearnMenu)),
+				A2($author$project$Main$navItem, 'Configuration', $author$project$Messages$DisplayConfiguration),
+				A2($author$project$Main$navItem, 'Operator', $author$project$Messages$DisplayReceiver),
+				A2($author$project$Main$navItem, 'Calculator', $author$project$Messages$DisplayCalculator)
 			]));
-}();
+};
 var $author$project$Messages$StoreGoniometerSetting = {$: 'StoreGoniometerSetting'};
 var $author$project$Messages$StoreRangeSetting = {$: 'StoreRangeSetting'};
 var $author$project$Types$UiBothKnobs = {$: 'UiBothKnobs'};
-var $author$project$Types$UiLeftSide = {$: 'UiLeftSide'};
 var $author$project$Types$UiOperatorPage = {$: 'UiOperatorPage'};
-var $author$project$Types$UiRightSide = {$: 'UiRightSide'};
 var $mdgriffith$elm_ui$Internal$Model$Focus = {$: 'Focus'};
 var $mdgriffith$elm_ui$Internal$Model$PseudoSelector = F2(
 	function (a, b) {
@@ -17425,10 +17553,6 @@ var $author$project$PushButtons$actionButtonNoLabel = F2(
 					onPress: $elm$core$Maybe$Just(msg)
 				}));
 	});
-var $mdgriffith$elm_ui$Internal$Model$Below = {$: 'Below'};
-var $mdgriffith$elm_ui$Element$below = function (element) {
-	return A2($mdgriffith$elm_ui$Element$createNearby, $mdgriffith$elm_ui$Internal$Model$Below, element);
-};
 var $author$project$PushButtons$indicatorLabelAbove = F2(
 	function (label, state) {
 		var colour = A3($author$project$Utils$choose, state, $author$project$Constants$vividGreen, $author$project$Constants$paletteDarkGreen);
@@ -18897,14 +19021,12 @@ var $author$project$OperatorPage$operatorPageLandscape = function (model) {
 			[
 				A2(
 				$mdgriffith$elm_ui$Element$column,
-				_Utils_ap(
-					_List_fromArray(
-						[
-							$mdgriffith$elm_ui$Element$width(
-							$mdgriffith$elm_ui$Element$fillPortion(3)),
-							$mdgriffith$elm_ui$Element$centerX
-						]),
-					A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiLeftSide)),
+				_List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$width(
+						$mdgriffith$elm_ui$Element$fillPortion(3)),
+						$mdgriffith$elm_ui$Element$centerX
+					]),
 				_List_fromArray(
 					[
 						A2(
@@ -18939,14 +19061,12 @@ var $author$project$OperatorPage$operatorPageLandscape = function (model) {
 					])),
 				A2(
 				$mdgriffith$elm_ui$Element$column,
-				_Utils_ap(
-					_List_fromArray(
-						[
-							$mdgriffith$elm_ui$Element$width(
-							$mdgriffith$elm_ui$Element$fillPortion(2)),
-							$mdgriffith$elm_ui$Element$centerX
-						]),
-					A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiRightSide)),
+				_List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$width(
+						$mdgriffith$elm_ui$Element$fillPortion(2)),
+						$mdgriffith$elm_ui$Element$centerX
+					]),
 				_List_fromArray(
 					[
 						$author$project$Utils$helpButton,
@@ -18955,18 +19075,76 @@ var $author$project$OperatorPage$operatorPageLandscape = function (model) {
 					]))
 			]));
 };
+var $mdgriffith$elm_ui$Internal$Model$Bottom = {$: 'Bottom'};
+var $mdgriffith$elm_ui$Element$alignBottom = $mdgriffith$elm_ui$Internal$Model$AlignY($mdgriffith$elm_ui$Internal$Model$Bottom);
 var $author$project$OperatorPage$operatorPagePortrait = function (model) {
 	return A2(
 		$mdgriffith$elm_ui$Element$column,
-		$author$project$Utils$commonStyles,
+		_Utils_ap(
+			_List_fromArray(
+				[
+					$mdgriffith$elm_ui$Element$centerX,
+					A2(
+					$author$project$TrainingMode$tutorialTextBox,
+					model,
+					_List_fromArray(
+						[
+							$mdgriffith$elm_ui$Element$moveUp(220),
+							$mdgriffith$elm_ui$Element$moveLeft(0),
+							$mdgriffith$elm_ui$Element$centerX,
+							$mdgriffith$elm_ui$Element$centerY
+						]))
+				]),
+			A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiOperatorPage)),
 		_List_fromArray(
 			[
 				A2(
-				$author$project$OperatorPage$rangeSliderAndCRT,
-				model,
-				$author$project$OperatorPage$traceDependingOnMode(model)),
-				A2($author$project$OperatorPage$clickableGonioImage, model, $author$project$Types$TutorialAdjustRange),
-				A2($author$project$OperatorPage$clickableRangeKnob, model, $author$project$Types$TutorialDummy)
+				$mdgriffith$elm_ui$Element$row,
+				_List_Nil,
+				_List_fromArray(
+					[
+						A2(
+						$mdgriffith$elm_ui$Element$el,
+						_List_Nil,
+						A2(
+							$author$project$OperatorPage$rangeSliderAndCRT,
+							model,
+							$author$project$OperatorPage$traceDependingOnMode(model)))
+					])),
+				A2(
+				$mdgriffith$elm_ui$Element$row,
+				A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiBothKnobs),
+				_List_fromArray(
+					[
+						A2($author$project$OperatorPage$clickableGonioImage, model, $author$project$Types$UiRangeKnob),
+						A2(
+						$mdgriffith$elm_ui$Element$el,
+						A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UiGonioButton),
+						A2($author$project$PushButtons$actionButtonLabelAbove, 'GONIO', $author$project$Messages$StoreGoniometerSetting)),
+						A2($author$project$OperatorPage$clickableRangeKnob, model, $author$project$Types$UiGoniometer),
+						A2(
+						$mdgriffith$elm_ui$Element$el,
+						A2($author$project$TrainingMode$tutorialHighlighting, model, $author$project$Types$UIRangeButton),
+						A2($author$project$PushButtons$actionButtonLabelAbove, 'RANGE', $author$project$Messages$StoreRangeSetting)),
+						A2(
+						$mdgriffith$elm_ui$Element$el,
+						_List_fromArray(
+							[$mdgriffith$elm_ui$Element$alignBottom]),
+						$author$project$Utils$helpButton)
+					])),
+				A2(
+				$mdgriffith$elm_ui$Element$row,
+				_List_fromArray(
+					[
+						$mdgriffith$elm_ui$Element$width(
+						$mdgriffith$elm_ui$Element$fillPortion(2)),
+						$mdgriffith$elm_ui$Element$centerX
+					]),
+				_List_fromArray(
+					[
+						$author$project$OperatorPage$modeSwitchPanel(model),
+						$author$project$OperatorPage$raidStrengthPanel(model)
+					]))
 			]));
 };
 var $author$project$OperatorPage$operatorPage = function (model) {
@@ -19009,7 +19187,10 @@ var $author$project$Main$view = function (model) {
 							A2($mdgriffith$elm_ui$Element$spacingXY, 0, 20)
 						]),
 					_List_fromArray(
-						[$author$project$Main$navBar, content])))
+						[
+							$author$project$Main$navBar(model),
+							content
+						])))
 			]),
 		title: 'Chain Home receiver emulation'
 	};
